# LLVM-Pass

./: CMakeLists.txt  MyPass.cpp  README.md  a.txt  command.txt
CallInstCount/: CMakeLists.txt  CallInstCountPass.cpp
CountInst/: CMakeLists.txt  CountInstPass.cpp
DetectSwitch/: CMakeLists.txt  DetectSwitchPass.cpp
DummyFunc/: CMakeLists.txt  DummyFuncPass.cpp
FindDispatcher/: CMakeLists.txt  FindDispatcherPass.cpp
FindHubBlocks/: CMakeLists.txt  FindHubBlocksPass.cpp
FuncArg/: CMakeLists.txt  FuncArgPass.cpp
FuncName/: CMakeLists.txt  FuncNamePass.cpp
LoopAnalysis/: CMakeLists.txt  LoopAnalysisPass.cpp
MostFreq/: CMakeLists.txt  MostFreqPass.cpp
VMTag/: CMakeLists.txt  VMTagPass.cpp
